# v-trade

./: ClusterSecurity.py  DataDownloadFutu.py  Hedge.py  History.py  IntradayAnalysis.py  Log.py  Makefile  Option.py  OptionBroadieGlasserman.py  OptionPricing.py  PairsTrading.py  ProbabilityDistribution.py  README.md  ServiceFeeStocks.py  SyncHistoryToLocal.py  Trade.py  UserSecurity.py  Visualize.py  VolatilityHistory.py  WebMain.py  pi.py  t.py  t3.py  t_curses.py  tmp.py  v-trade.py  vars.mk  vars.prod.mk  vars.study.mk
ARCHIVES/: TASK.md  vars.mk  vars.study.mk
ARCHIVES/backtrader_py/: AAPL.csv  README.md  SPY.csv  TQQQ.csv  tqqq.py
ARCHIVES/code_snippet/: t2.py
ARCHIVES/conf/: p.conf
ARCHIVES/src/: newWords.sh
ARCHIVES/src/cpp/: IBTWSApp.cpp  IBTWSClient.h  Makefile  ModelBacktest.cpp  ModelBacktest.h  ModelGroup.cpp  ModelLive.h  Ohlcv.h  README.md  Scenario_v0.h  SnapData.h  bt.mk  global.mk  main_lv.cpp  scenario.h  t.cpp  v-trade.mk
ARCHIVES/src/cpp/conf/: bt.json  lv.json
ARCHIVES/src/cpp/twsapi_1014.01/: CMakeLists.txt
ARCHIVES/src/py/: BackTest.py  DataDownloadFutu.py  Fit_scipy_stats_johnsonsu.py  ProbabilityDistribution.py  README.md  Trade.py  VolatilityHistory.py  bt.py  v-trade.py
ARCHIVES/src/py/common/: BigPandasTable.py
ARCHIVES/src/py/datasource/: 20211217.csv  20211221.csv  ib_native.py
ARCHIVES/src/py/gw/: BaseGateway.py  GwFutu.py  GwYahoo.py  Makefile  merge  未命名.ipynb
ARCHIVES/src/py/pairs_trading/: BT.py  CointegrateJohansen.py  studyCointegrate.py
ARCHIVES/src/py/screener/: a.json  tmp.txt
V.20231224/src/cpp/: .gitignore  3rd-party.mk  BigTable.cpp  BigTable.h  CMakeLists.txt  CmdOption.cpp  CmdOption.h  Makefile  Ohlcv.cpp  Ohlcv.h  README.md  VContract.h  V_IB_EClientSocket.cpp  V_IB_EClientSocket.h  V_IB_EWrapper.cpp  V_IB_EWrapper.h  V_IB_Receiver.cpp  V_IB_Receiver.h  V_IB_Sender.cpp  V_IB_Sender.h  common.h  utility.h  v-main.cpp  v_news.cpp  v_scanner.cpp  v_subcmds.h  v_tws_events.cpp  v_tws_history.cpp
V.20231224/src/cpp/conf/: v-trade.json
backtrader_py/: QQQ.csv  VIX.csv  bt_aapl.py  condition.py
code_snippet/: test-color.py  tmp.py
conf/: SMARTEST.conf  TIPS.conf  tmp.conf  v-trade.conf  v-trade.utest.conf
data_static/: README.md  ScreenByPlates-20220112.json
datasource/: Finviz.py  ib.py  ib_native.py
docs/: tail_risk_control.md
gw/: BaseGateway.py  GwIB.py  GwYahoo.py  HistoricalDataLimitations.py  Makefile  test_decorators.py  yh.mk
screener/: TickerScreener.py
src/: env_build.sh
src/cpp/: Backtest.cpp  Backtest.h  BigTable.h  CMakeLists.txt  ContractPairTrade.cpp  ContractPairTrade.h  IBTWS.h  IBTWSApp.cpp  IBTWSApp.h  IBTWSClient copy.cpp  IBTWSClient.cpp  IBTWSClient.h  Makefile  ModelGroup.cpp  ModelGroup.h  ModelLive.cpp  ModelLive.h  Ohlcv.h  README.md  Scenario_v0.cpp  Scenario_v0.h  Scenario_v1.cpp  Scenario_v1.h  SnapData.h  bt.mk  common.h  contract.h  global.mk  main_bt.cpp  main_lv.cpp  main_lv_ibkr.cpp  scenario.cpp  scenario.h  strategy.h  t.cpp  utility.h  v-trade.mk
src/cpp/conf/: v-trade.json
src/cpp/twsapi_1014.01/: CMakeLists.txt  Makefile
src/py/: ClusterSecurity.py  GBSOptionPricing.py  Hedge.py  MC.py  Option.py  OptionBroadieGlasserman.py  OptionPricing.py  SyncHistoryToLocal.py  TerminalVH.py  WebMain.py  pi.py  quotations_push.py  v-trade.py
src/py/common/: BigPandasTable.py
src/py/datasource/: 1208.txt  20211129.txt  20211216.csv  20211220.csv  20211228.csv  未命名.ipynb
src/py/datasource/log/: scanner.xml
src/py/gw/: GwFinnhub.py  GwIB.py  GwYahoo.py  HistoricalDataLimitations.py  Makefile  Top_500Vol.csv  t.txt
src/py/pairs_trading/: Cointegrate.py  CointegrateJohansen.py  MarketWatcher.py  OLS.py  pairs_trading.py
src/py/screener/: ScreenByPlates.py  SpeedControl.py  xxx.csv
